--- a/css/yazzy.scss
+++ b/css/yazzy.scss
@@ -192,6 +192,67 @@ header{
 //******* End of Home Styling
 
 //******* Project Page Styling
+.columns {
+    display: flex;
+    padding: 20px 0;
+    .reg-column {
+        width: 50%;
+    }
+    .left-column-text {
+        width: 50%;       
+        display: flex;
+        flex-flow: column;
+        justify-content: center;
+        p {
+            width: 70%;
+        }
+    }
+    .left-column-img {
+        width: 50%;
+        display: flex;
+        flex-flow: column;
+        justify-content: space-evenly;
+        align-items: flex-start;
+    }
+    .right-column-text {
+        width: 50%;
+        display: flex;
+        flex-flow: column;
+        justify-content: center;
+        padding-left: 15%;
+    }
+    .right-column-img{
+        width: 50%;
+        display: flex;
+        flex-flow: column;
+        justify-content: space-evenly;
+    }
+}
+@media (max-width: 650px) {
+    .columns {
+        flex-flow: column;
+        .left-column-text {
+            width: 100%;
+            p {
+                width: 100%;
+            }
+        }
+        .left-column-img {
+            width: 100%;
+        } 
+        .right-column-text {
+            width: 100%;
+            padding-left: unset;
+        }
+        .right-column-img {
+            width: 100%;
+        }
+        .reg-column {
+            width: 100%;
+        }
+    }
+}
+
 .grid-container {
     position: relative;
 }
