Card mobile alignment

--- a/css/yazzy.scss
+++ b/css/yazzy.scss
@@ -428,6 +428,9 @@ header{
     .desc-padding-right {
         padding-right: unset;
     }
+    .card-pad-left {
+        margin-left: unset;
+    }
 }
 //******* End of Project Page Styling
 
