Change footer link color

--- a/css/yazzy.scss
+++ b/css/yazzy.scss
@@ -514,6 +514,9 @@ h4 {
 
 
 //******* Footer Buffer Styling
+.white-link {
+    color: #ffffff !important;
+}
 .footer-buffer{
   color: $yazzy-black;
   background-color: $pure-white;
