Fixed tile size, my_website duplicate pages

--- a/css/yazzy.scss
+++ b/css/yazzy.scss
@@ -164,6 +164,7 @@ h4 {
       padding: 1em;
       position: relative;
       box-shadow: 0.5em -0.5em 0px 0px;
+      height: 100%;
       .tile-title{
         font-family: $oswald;
         font-size: 1.3em;
